--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="leftparent">
                <h1 class="heading-127">Hi, I am Amitabh Borah<br> A Freelance WordPress Expert<br>& Writer</h1>
                <p class="paragraph-61">Hi, I am Amitabh Borah a Freelance <strong>WordPress Expert with +5 Years of Experience</strong> in Developing Cool WordPress Websites along with Writing Quality Blog Content.</p>
-               <div class="social"><a href="#" class="w-inline-block"><img src="./files/597fd732e9d337000150efda_insta logo.svg" loading="lazy" alt="" class="image-314"></a><a href="#" class="w-inline-block"><img src="./files/597fd643d4e1af0001c189c5_002-linkedin-logo.svg" loading="lazy" alt="" class="image-315"></a><a href="#" class="w-inline-block"><img src="./files/whatsapp.svg" loading="lazy" alt="" class="image-316"></a><a href="#" class="w-inline-block"><img src="./files/597fd726e9d337000150efd7_facebook.svg" loading="lazy" alt="" class="image-317"></a></div>
+               <!--<div class="social"><a href="#" class="w-inline-block"><img src="./files/597fd732e9d337000150efda_insta logo.svg" loading="lazy" alt="" class="image-314"></a><a href="#" class="w-inline-block"><img src="./files/telegram.svg" loading="lazy" alt="" class="image-315"></a><a href="#" class="w-inline-block"><img src="./files/whatsapp.svg" loading="lazy" alt="" class="image-316"></a><a href="#" class="w-inline-block"><img src="./files/597fd726e9d337000150efd7_facebook.svg" loading="lazy" alt="" class="image-317"></a></div>-->
                <a href="#" target="_blank" class="button-2 w-button">👉 Get in Touch</a>
             </div>
          </div>
@@ -61,15 +61,14 @@
                   </div>
                </a>
             </div>
-			<!-- 
             <div class="projectcell">
                <a href="" class="link-block-42 w-inline-block">
                   <div class="hennessey">
-                     <div class="text-block-38">04</div>
-                     <div class="div-block-656"><img src="#" class="image-321"></div>
+                     <div id="num4" class="text-block-38">04</div>
+                     <div class="div-block-656"><img src="./files/review.png" class="image-321"></div>
                      <div class="div-block-654">
-                        <h1 class="heading-128"></h1>
-                        <div class="text-block-39"></div>
+                        <h1 id="head4" class="heading-128">5 Star Reviews</h1>
+                        <div id="para4" class="text-block-39">5 Star reviews from Customers like Eyal Lavee.</div>
                      </div>
                   </div>
                </a>
@@ -78,15 +77,14 @@
                <a href="" class="link-block-43 w-inline-block">
                   <div class="hennessey">
                      <div class="text-block-38">05</div>
-                     <div class="div-block-656"><img src="#" class="image-322"></div>
+                     <div class="div-block-656"><img src="./files/work.png" class="image-322"></div>
                      <div class="div-block-654">
-                        <h1 class="heading-128"></h1>
-                        <div class="text-block-39"></div>
+                        <h1 class="heading-128">Let's Get Started !!</h1>
+                        <div class="text-block-39">Just Click on the "Get in Touch" button to Contact Me.</div>
                      </div>
                   </div>
                </a>
             </div>
-			-->
          </div>
       </div>
    </body>
