--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                <a href="" class="link-block-41 w-inline-block">
                   <div class="div-block-657">
                      <div class="text-block-38">02</div>
-                     <div class="div-block-656"><img src="./files/validity.png"></div>
+                     <div class="div-block-656"><img loading="lazy" src="./files/validity.png" class="image2"></div>
                      <div class="div-block-654">
                         <h1 class="heading-128">1 Year Support</h1>
                         <div class="text-block-39">That's Right, once you purchase the premium plan you will get a whole year worth of support ( Which means during the 1 year period i will do anything you want on your website, like Website Customization, Bug Fixing Etc ) No need to Pay multiple Freelancers thoughout the Year, Purchase the Premium Plan and Enjoy for a Complete Year.</div>
