--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                <h1 class="heading-127">Hi, I am Amitabh Borah<br> A Freelance WordPress Expert<br>& Writer</h1>
                <p class="paragraph-61">Hi, I am Amitabh Borah a Freelance <strong>WordPress Expert with +5 Years of Experience</strong> in Developing Cool WordPress Websites along with Writing Quality Blog Content.</p>
                <!--<div class="social"><a href="#" class="w-inline-block"><img src="./files/597fd732e9d337000150efda_insta logo.svg" loading="lazy" alt="" class="image-314"></a><a href="#" class="w-inline-block"><img src="./files/telegram.svg" loading="lazy" alt="" class="image-315"></a><a href="#" class="w-inline-block"><img src="./files/whatsapp.svg" loading="lazy" alt="" class="image-316"></a><a href="#" class="w-inline-block"><img src="./files/597fd726e9d337000150efd7_facebook.svg" loading="lazy" alt="" class="image-317"></a></div>-->
-               <a href="#" target="_blank" class="button-2 w-button">👉 Get in Touch</a>
+               <a href="./contact/" target="_blank" class="button-2 w-button">👉 Get in Touch</a>
             </div>
          </div>
          <div class="rightcontainer">
