--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                <a href="" class="link-block-41 atlas w-inline-block">
                   <div class="div-block-655 atlas">
                      <div class="text-block-38 atlas">01</div>
-                     <img loading="lazy" src="./files/pricing2.png"class="image-318 atlas">
+                     <img loading="lazy" src="./files/pricing.png"class="image-318 atlas">
                      <div class="div-block-654">
                         <h1 class="heading-137">Value for Money</h1>
                         <div class="text-block-39 atlas">Value for Money Pricing ( Believe me, others will charge you thousands of $ for the service you are getting here.</div>
