--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ span.privacypolicy-oo {
 	width: 46px;
 }
 	.elementor-588 .elementor-element.elementor-element-153c713 {
-	width: 40px;
+	width: 45px;
 }
 	.elementor-column.elementor-col-100.elementor-top-column.elementor-element.elementor-element-ba7ef0a.animated.slideInRight {
 	animation-duration: 0.2s;
@@ -925,7 +925,7 @@ span.privacypolicy-oo {
 	width: 46px;
 }
 	.elementor-588 .elementor-element.elementor-element-153c713 {
-	width: 40px;
+	width: 45px;
 }
 	.elementor-testimonial__text {
 	margin-bottom: 100px;
@@ -1210,6 +1210,10 @@ span.privacypolicy-oo {
 }
 
 @media only screen and (min-width: 771px) and (max-width: 1026px){
+	.menu-item.menu-item-type-custom.menu-item-object-custom.menu-item-14 {
+    padding-bottom: 20px;
+    padding-top: 20px !important;
+}
 	.menu-item.menu-item-type-custom.menu-item-object-custom.current-menu-item.menu-item-15 {
 	padding-bottom: 20px;
 }
