--- a/about/index.html
+++ b/about/index.html
@@ -1970,7 +1970,9 @@ top:300px !important;
 } */
 }</style>
 			<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+	</script>
+	<script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
 </head>
 <body class="page-template-default page page-id-72 elementor-default elementor-kit-5 elementor-page elementor-page-72">
 
