--- a/careers/index.html
+++ b/careers/index.html
@@ -1971,7 +1971,9 @@ top:300px !important;
 } */
 }</style>
 			<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+	</script>
+	<script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
 </head>
 <body class="page-template page-template-elementor_header_footer page page-id-258 elementor-default elementor-template-full-width elementor-kit-5 elementor-page elementor-page-258">
 
