--- a/index.html
+++ b/index.html
@@ -1991,7 +1991,9 @@ top:300px !important;
 } */
 }</style>
 			<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+	</script>
+	<script type="text/javascript" src="https://unpkg.com/default-passive-events"></script>
 </head>
 <body class="home page-template page-template-elementor_header_footer page page-id-21 elementor-default elementor-template-full-width elementor-kit-5 elementor-page elementor-page-21">
 
